--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,10 @@ hermesEnabled=true
 # This allows your app to draw behind system bars for an immersive UI.
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
+
+org.gradle.daemon=true
+
+MYAPP_RELEASE_STORE_FILE=aluminium.keystore
+MYAPP_RELEASE_KEY_ALIAS=aluminium
+MYAPP_RELEASE_STORE_PASSWORD=afronova
+MYAPP_RELEASE_KEY_PASSWORD=afronova
