--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.0",
+    "react-native-blob-util": "^0.22.2",
     "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-get-random-values": "^1.11.0",
