Minor Update karena Key tidak cocok

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -45,6 +45,8 @@ edgeToEdgeEnabled=false
 
 org.gradle.daemon=true
 
+#android.native.buildOutput=16k
+
 MYAPP_RELEASE_STORE_FILE=aluminium.keystore
 MYAPP_RELEASE_KEY_ALIAS=aluminium
 MYAPP_RELEASE_STORE_PASSWORD=afronova
